fix(ffe-searchable-dropdown-react): fixed dark mode version

--- a/packages/ffe-searchable-dropdown-react/less/searchable-dropdown.less
+++ b/packages/ffe-searchable-dropdown-react/less/searchable-dropdown.less
@@ -110,55 +110,29 @@
 }
 
 .ffe-searchable-dropdown--dark {
-    .ffe-searchable-dropdown__list {
-        background: @ffe-grey-dark-blue--dark;
-    }
-
     .ffe-searchable-dropdown__button {
-        fill: @ffe-blue-focus;
+        &:focus,
+        &:hover {
+            border: 2px solid @ffe-blue-focus;
+        }
+
+        svg {
+            fill: @ffe-blue-focus;
+        }
     }
 
+    .ffe-searchable-dropdown__list,
+    .ffe-searchable-dropdown__list-item-container {
+        border-color: @ffe-grey-silver;
+    }
+
+    .ffe-searchable-dropdown__list-item-body,
     .ffe-searchable-dropdown__no-match {
         color: @ffe-white;
+        background-color: @ffe-grey-dark-blue--dark;
     }
 
-    .ffe-dropdown {
-        color: @ffe-white;
-        background: @ffe-grey-dark-blue--dark;
-        border-color: @ffe-grey-dark-blue--dark;
-        box-shadow: none;
-
-        &:focus {
-            border-color: @ffe-blue-focus;
-        }
-
-        &::placeholder {
-            color: @ffe-white;
-        }
-
-        &[aria-invalid='true'] {
-            border: 1px solid @ffe-orange-fire;
-        }
-    }
-
-    .ffe-searchable-dropdown__list-item-container {
-        border: none;
-    }
-
-    .ffe-searchable-dropdown__list-item-body {
-        color: @ffe-white;
-
-        * {
-            color: @ffe-white;
-        }
-
-        &--highlighted {
-            background-color: @ffe-blue-pale;
-            color: @ffe-grey-dark-blue--dark;
-
-            * {
-                color: @ffe-grey-dark-blue--dark;
-            }
-        }
+    .ffe-searchable-dropdown__list-item-body:hover {
+        background-color: @ffe-blue-azure;
     }
 }
